# autopipeline

./: .env.template  .gitignore  README.md  autopilot-config.yaml  pyproject.toml
dev-notes/: 01-development-history.md  02-idea3-autopilot-plan.md  03-idea3-autopilot-vision.md  04-idea3-research-synthesis.md  05-idea3-architecture.md  06-idea3-detection-layer.md  07-idea3-diagnosis-engine.md  08-idea3-fix-generation.md  09-idea3-validation-writeback.md  10-idea3-implementation-plan.md  11-idea3-security-analysis.md  12-idea3-demo-script.md  13-remaining-tasks-plan.md
examples/customer_orders/: customer_orders.sql  metadata.json
examples/healing/: order_staleness_fix.md  schema_drift_fix.md  volume_anomaly_fix.md
examples/order_details_revenue/: metadata.json
examples/order_details_revenue/models/: order_details_revenue.sql  schema.yml
examples/order_inventory_dag/: metadata.json
examples/order_inventory_dag/dags/: order_inventory_dag.py
examples/promotion_analysis/: metadata.json
examples/promotion_analysis/models/: promotion_analysis.sql  schema.yml
implementation-notes/: 00-foundation.md  01-detection-engine.md  02-rca-engine.md  03-fix-generator.md  04-validation-writeback.md  05-orchestrator-cli.md  06-integration-testing.md  07-skill-contribution.md  08-streamlit-ui.md
skills/datahub-pipeline-generate/: README.md  SKILL.md
src/autopipeline/: __init__.py  agent.py  autopilot.py  cli.py  composer.py  config.py  connector.py  context.py  context_composer.py  detector.py  diagnosis.py  fixer.py  generator.py  healer.py  llm.py  llm_client.py  writer.py
src/autopipeline/templates/: airflow_dag.py.j2  dbt_model.sql.j2  dbt_schema.yml.j2  sql_transform.sql.j2
src/autopipeline/ui/: app.py  styles.py
src/autopipeline/ui/pages/: config.py  dashboard.py  healing.py  monitor.py
tests/: test_autopilot.py  test_composer.py  test_context.py  test_context_composer.py  test_detector.py  test_diagnosis.py  test_fixer.py  test_generator.py  test_healer.py  test_integration.py  test_ui.py  test_writer.py
