[project]
name = "autopipeline"
version = "0.2.0"
description = "Context-Aware Data Pipeline Generator — AI agents that read DataHub metadata to generate production-ready pipeline code and write back to the graph."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Muhammad Zakria", email = "muhammadzakriya412@gmail.com" },
]

dependencies = [
    "acryl-datahub>=1.6.0",
    "datahub-agent-context[langchain]>=1.6.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
autopipeline = "autopipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
