[project]
name = "autopipeline"
version = "1.0.0"
description = "AutoPilot — Self-Healing Data Pipeline Agent powered by DataHub metadata."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Muhammad Zakria", email = "muhammadzakriya412@gmail.com" },
]

dependencies = [
    "acryl-datahub>=1.6.0",
    "datahub-agent-context[langchain]>=1.6.0",
    "langchain-openai>=0.3",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sqlparse>=0.5",
    "sqlglot>=25.0",
    "pydantic>=2.0",
    "schedule>=1.2",
]

[project.scripts]
autopipeline = "autopipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
